--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="script.js"></script>
     <script src="lib/html2canvas.min.js"></script>
+    <script src="lib/canvas2image.js"></script>
   </head>
   <body>
     <main>
