--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
     </main>
     <aside>
       <div class="color-inputs">
-        <fieldset>
+        <div>
           <div>
             <input
               type="radio"
@@ -232,7 +232,7 @@
             <input type="radio" id="hof-radio" name="scope" value="hof" />
             <label for="hof">Hof</label>
           </div>
-        </fieldset>
+        </div>
 
         <div class="color-input">
           <span>Fensterläden</span>
